--- a/templates/register.templ
+++ b/templates/register.templ
@@ -1,14 +1,14 @@
 package templates
 
-templ Login() {
+templ Register() {
     @layout("Login") {
     <div class="h-screen flex items-center justify-center">
       <div up-main up-dismissable up-modal="true" class="w-full max-w-lg">
         <div class="w-full max-w-lg mx-auto bg-white p-8 rounded-xl shadow-lg border border-gray-200">
-            <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Connexion</h2>
-            
-            <form 
-            action="/login" 
+            <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Inscription</h2>
+
+            <form
+            action="/register"
             method="post"
             class="space-y-6"
             up-submit
@@ -41,7 +41,7 @@ templ Login() {
                 </div>
             </div>
 
-            <div class="my-2">
+            <div>
                 <label for="password" class="block text-sm font-medium text-gray-700 mb-1">
                 Mot de passe
                 </label>
@@ -53,26 +53,22 @@ templ Login() {
                 required
                 />
             </div>
-            <div class="flex items-center justify-end">
-                <a href="/forgot-password" class="text-sm text-blue-600 hover:text-blue-700">
-                Mot de passe oublié?
-                </a>
-            </div>
+
             
             <button 
                 type="submit" 
                 class="w-full bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition-colors"
             >
-                Se connecter
+                S'inscrire
             </button>
             </form>
             
             <div class="mt-6 flex items-center justify-center text-center space-x-2">
                 <p class="text-sm text-gray-600">
-                    Pas encore de compte?
+                    Vous avez déjà un compte ?
                 </p>
-                <a href="/register" class="font-medium text-blue-600 hover:text-blue-700">
-                    Créer un compte
+                <a href="/login" class="font-medium text-blue-600 hover:text-blue-700">
+                    Se connecter
                 </a>
             </div>
         </div>
